--- a/src/audiotool/Player.sass
+++ b/src/audiotool/Player.sass
@@ -1,7 +1,7 @@
 component
-  bottom: 0
+  top: 0
   position: sticky
-  min-height: 5em
+  flex: 0 0 64px
   display: flex
   width: 100%
   background-color: #333333
