--- a/src/audiotool/app.sass
+++ b/src/audiotool/app.sass
@@ -5,3 +5,13 @@ component
   flex-direction: column
   width: 100%
   height: 100%
+  overflow: hidden scroll
+
+  > div.content
+    flex: 1 0 0
+
+  > footer
+    flex: 0 0 64px
+    bottom: 0
+    position: sticky
+    background-color: rgba(blue, 0.2)
