--- a/src/example-app.sass
+++ b/src/example-app.sass
@@ -1,4 +1,5 @@
 component
+  margin: 2em
   font-family: Verdana
   font-size: 0.75em
   display: flex
@@ -6,5 +7,21 @@ component
   width: fit-content
   row-gap: 1em
 
-.red
-  color: red
+  button
+    padding: 0.5em 1em
+    font-family: inherit
+    font-size: inherit
+    color: inherit
+    border: none
+    border-radius: 0.25em
+    width: max-content
+    line-height: inherit
+    background-color: #333333
+    cursor: pointer
+
+  p
+    white-space: nowrap
+
+
+  .red
+    color: red
