adds Player design

--- a/src/audiotool/app.sass
+++ b/src/audiotool/app.sass
@@ -11,7 +11,7 @@ component
     flex: 1 0 0
 
   > footer
-    flex: 0 0 64px
+    flex: 0 0 6em
     bottom: 0
     position: sticky
     background-color: rgba(blue, 0.2)
