--- a/src/audiotool/Player.sass
+++ b/src/audiotool/Player.sass
@@ -1,7 +1,49 @@
+$PlaceHolderColor: #111
+
 component
   top: 0
   position: sticky
-  flex: 0 0 64px
+  flex: 0 0 8em
+  padding: 0 1em
   display: flex
   width: 100%
-  background-color: #333333
+  column-gap: 1em
+  background-color: black
+  z-index: 1
+
+  > header.cover
+    display: flex
+    align-items: center
+    justify-content: center
+    position: relative
+
+    > img
+      height: 6em
+      aspect-ratio: 1 / 1
+      object-fit: contain
+      border-radius: 0.5em
+      background-color: $PlaceHolderColor
+
+  > div.names
+    flex: 1 0 0
+    display: flex
+    flex-direction: column
+    justify-content: center
+    row-gap: 0.25em
+    font-size: 1.5em
+
+    > div.track
+      height: 1.25em
+      color: white
+
+      &:empty
+        background-color: $PlaceHolderColor
+
+    > div.collaborators
+      height: 1.25em
+
+      &:empty
+        background-color: $PlaceHolderColor
+
+      > a
+        text-decoration: none
