--- a/src/audiotool/Player.sass
+++ b/src/audiotool/Player.sass
@@ -3,10 +3,11 @@
 component
   top: 0
   position: sticky
-  flex: 0 0 8em
+  font-size: 1.5em
+  flex: 0 0 5em
   padding: 0 1em
   display: grid
-  grid-template-columns: 6em 1fr
+  grid-template-columns: 3em 1fr
   width: 100%
   column-gap: 1em
   background-color: black
@@ -19,18 +20,18 @@ component
     position: relative
 
     > img
-      height: 6em
+      height: 3em
       aspect-ratio: 1 / 1
       object-fit: contain
       border-radius: 0.5em
       background-color: $PlaceHolderColor
+      border: 0.125em gray solid
 
   > div.names
     display: flex
     flex-direction: column
     justify-content: center
     row-gap: 0.25em
-    font-size: 1.5em
     overflow: hidden
 
     > div
