--- a/src/main.sass
+++ b/src/main.sass
@@ -1,5 +1,5 @@
 html, body
-  font-family: Verdana
+  font-family: 'Roboto', sans-serif
   font-size: max(7px, min(2vw, 16px))
   margin: 0
   padding: 0
