--- a/src/audiotool/Player.sass
+++ b/src/audiotool/Player.sass
@@ -4,7 +4,7 @@ component
   top: 0
   position: sticky
   font-size: 1.25em
-  flex: 0 0 6em
+  flex: 0 0 6.5em
   padding: 0 1em
   display: grid
   grid-template-columns: 5em 1fr
@@ -12,6 +12,8 @@ component
   column-gap: 1em
   background-color: black
   z-index: 1
+  border-bottom: 1px rgba(white, 0.1) solid
+  box-shadow: 0 1em 1em 0 rgba(black, 0.5)
 
   > header.cover
     display: flex
@@ -25,7 +27,7 @@ component
       object-fit: contain
       border-radius: 0.5em
       background-color: $PlaceHolderColor
-      border: 0.125em gray solid
+      @include audiotool
 
   > div.info
     display: flex
