hover on genre button

--- a/src/audiotool/ui/TrackList.sass
+++ b/src/audiotool/ui/TrackList.sass
@@ -84,6 +84,9 @@ component
       background-color: rgba(white, 0.25)
       text-decoration: none
 
+      &:hover
+        background-color: rgba(white, 0.75)
+
     > .meta
       display: flex
       @include mobile
