--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -55,9 +55,10 @@ component
         @include buffering
 
   > div.info
+    height: 5em
     display: flex
     flex-direction: column
-    justify-content: center
+    justify-content: space-around
     row-gap: 0.25em
     overflow: hidden
     padding: 0 2em 0 0
