--- a/src/audiotool/ui/TrackList.sass
+++ b/src/audiotool/ui/TrackList.sass
@@ -85,7 +85,7 @@ component
       text-decoration: none
 
       &:hover
-        background-color: rgba(white, 0.75)
+        background-color: white
 
     > .meta
       display: flex
