--- a/src/audiotool/ui/PlaybackProgress.sass
+++ b/src/audiotool/ui/PlaybackProgress.sass
@@ -7,7 +7,7 @@
     background-color: rgba(orange, 0.00)
 
 component
-  height: 0.66em
+  height: 0.5em
   position: relative
   border-radius: 0.25em
   --progress: 0.0
@@ -23,11 +23,12 @@ component
     overflow: hidden
 
     > div.bar
-      top: 0
-      left: 0
-      width: calc(var(--progress) * 100%)
-      height: 100%
+      top: 1px
+      left: 1px
+      width: calc(var(--progress) * calc(100% - 2px))
+      height: calc(100% - 2px)
       position: absolute
+      border-radius: 1px
       background-color: orange
 
       &.buffering
