--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -4,8 +4,7 @@ component
   top: 0
   position: sticky
   font-size: 1.25em
-  flex: 0 0 6.5em
-  padding: 0 1em
+  padding: 1em
   display: grid
   align-items: center
   grid-template-columns: 5em 1fr
@@ -55,7 +54,7 @@ component
         @include buffering
 
   > div.info
-    height: 5em
+    height: 4.5em
     display: flex
     flex-direction: column
     justify-content: space-around
@@ -76,6 +75,7 @@ component
       text-overflow: ellipsis
 
     > div.time
+      height: 1em
       display: flex
       justify-content: space-between
-      font-size: 0.75em
+      font-size: 0.85em
