--- a/src/audiotool/ui/TrackList.sass
+++ b/src/audiotool/ui/TrackList.sass
@@ -92,6 +92,7 @@ component
       @include mobile
         flex-direction: column
       align-items: end
+      justify-content: space-between
       column-gap: 1em
 
       svg
