--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -1,6 +1,7 @@
 @import common
 
 component
+  z-index: 1
   top: 0
   position: sticky
   font-size: 1.25em
@@ -10,10 +11,8 @@ component
   grid-template-columns: 5em 1fr
   width: 100%
   column-gap: 1em
-  background-color: black
-  z-index: 1
-  border-bottom: 1px rgba(white, 0.1) solid
-  box-shadow: 0 1em 1em 0 rgba(black, 0.5)
+  background: linear-gradient(to bottom, #0A0A0A 0%, #0D0D0D 100%)
+  box-shadow: 0 2em 2em 0 rgba(black, 0.5), 0 0.125em 0.125em 0 rgba(black, 0.5)
 
   > header.cover
     height: 5em
@@ -78,4 +77,5 @@ component
       height: 1em
       display: flex
       justify-content: space-between
-      font-size: 0.85em
+      font-size: 0.75em
+      color: #2A2A2A
