scroll into view

--- a/src/audiotool/ui/TrackList.sass
+++ b/src/audiotool/ui/TrackList.sass
@@ -48,6 +48,7 @@ component
       background: none
       background-repeat: no-repeat
       background-position: center
+      outline: none
 
       > span.index
         color: #333
