mobile inner-width

--- a/src/audiotool/ui/App.sass
+++ b/src/audiotool/ui/App.sass
@@ -6,8 +6,13 @@ component
   width: 100%
   height: 100%
   overflow: hidden scroll
+  --inner-width: 75%
+  @include mobile
+    --inner-width: 96%
 
   > section.content
+    display: flex
+    justify-content: center
     flex: 1 0 0
 
   > footer
