--- a/src/audiotool/ui/TrackList.sass
+++ b/src/audiotool/ui/TrackList.sass
@@ -2,125 +2,10 @@
 @import common
 
 component
-  margin: 2em auto
-  width: 96%
+  margin: 2em 0
+  width: var(--inner-width)
   display: grid
   grid-template-columns: repeat(2, max-content) minmax(0, 1fr) repeat(2, max-content)
   align-items: center
   row-gap: 1em
   column-gap: 1em
-
-  span
-    white-space: nowrap
-    overflow: hidden
-    text-overflow: ellipsis
-
-  > div.track
-    display: contents
-
-    &.active
-      > button.play
-        @include play
-
-        > span.index
-          display: none
-
-    &.buffering > button.play
-      @include buffering
-
-    &.playing > button.play
-      @include pause
-
-    &:not(.active)
-      > button.play:hover
-        @include play
-
-        > span.index
-          display: none
-
-    > button.play
-      font-size: inherit
-      width: 2.5em
-      height: 2.5em
-      cursor: pointer
-      color: inherit
-      border: none
-      background: none
-      background-repeat: no-repeat
-      background-position: center
-      outline: none
-
-      > span.index
-        color: #333
-
-    > img
-      width: 3em
-      aspect-ratio: 1 / 1
-      border-radius: 0.25em
-      object-fit: contain
-      background-color: #222
-
-    > .names
-      display: flex
-      flex-direction: column
-      justify-content: center
-      padding: 0 1em 0 0
-
-      > .track
-        white-space: nowrap
-        overflow: hidden
-        text-overflow: ellipsis
-        color: white
-        cursor: pointer
-
-    > .genre
-      width: 100%
-      height: 50%
-      display: flex
-      align-items: center
-      justify-content: center
-      border-radius: 2em
-      padding: 0.25em
-      color: black
-      background-color: rgba(white, 0.25)
-      text-decoration: none
-
-      &:hover
-        background-color: white
-
-    > .meta
-      display: flex
-      @include mobile
-        flex-direction: column
-      align-items: end
-      justify-content: space-between
-      column-gap: 1em
-
-      svg
-        opacity: 0.5
-
-      > .date
-        display: flex
-        align-items: center
-        column-gap: 0.25em
-
-        > svg
-          fill: currentColor
-          height: 1.25em
-          aspect-ratio: 1 / 1
-
-        > span
-          text-align: right
-
-      > .duration
-        display: flex
-        align-items: center
-        column-gap: 0.25em
-
-        > svg
-          fill: currentColor
-          height: 1.25em
-          aspect-ratio: 1 / 1
-
-        > span
-          text-align: left
