--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -4,78 +4,82 @@ component
   z-index: 1
   top: 0
   position: sticky
-  font-size: 1.25em
-  padding: 1em
-  display: grid
-  align-items: center
-  grid-template-columns: 5em 1fr
+  display: flex
   width: 100%
-  column-gap: 1em
+  justify-content: center
   background: linear-gradient(to bottom, #0A0A0A 0%, #0D0D0D 100%)
-  box-shadow: 0 2em 2em 0 rgba(black, 0.5), 0 0.125em 0.125em 0 rgba(black, 0.5)
+  box-shadow: 0 2em 2em 0 rgba(black, 0.4), 0 0.125em 0.125em 0 rgba(black, 0.2)
 
-  > header.cover
-    height: 5em
-    display: flex
+  > div.center
+    margin: 1em 0
+    font-size: 1.25em
+    display: grid
     align-items: center
-    justify-content: center
-    position: relative
-    overflow: hidden
-    border-radius: 0.5em
+    grid-template-columns: 5em 1fr
+    width: var(--inner-width)
+    column-gap: 1em
 
-    > img
-      height: 100%
-      aspect-ratio: 1 / 1
-      object-fit: contain
-      background-color: $PlaceHolderColor
-      @include audiotool
-
-    &.active:hover > div.state
-      visibility: visible
-
-    > div.state
-      top: 0
-      left: 0
-      width: 100%
-      height: 100%
-      position: absolute
-      background-size: 50%
-      background-color: rgba(black, 0.2)
-      visibility: hidden
-      cursor: pointer
-
-      @include play
-
-      &.playing
-        @include pause
-
-      &.buffering
-        @include buffering
-
-  > div.info
-    height: 4.5em
-    display: flex
-    flex-direction: column
-    justify-content: space-around
-    row-gap: 0.25em
-    overflow: hidden
-    padding: 0 2em 0 0
-
-    > div
-      &:empty
-        border-radius: 0.125em
-        background-color: $PlaceHolderColor
-
-    > div.track
-      color: white
-      white-space: nowrap
-      height: 1.25em
-      overflow: hidden
-      text-overflow: ellipsis
-
-    > div.time
-      height: 1em
+    > header.cover
+      height: 5em
       display: flex
-      justify-content: space-between
-      font-size: 0.75em
-      color: #2A2A2A
+      align-items: center
+      justify-content: center
+      position: relative
+      overflow: hidden
+      border-radius: 0.5em
+
+      > img
+        height: 100%
+        aspect-ratio: 1 / 1
+        object-fit: contain
+        background-color: $PlaceHolderColor
+        @include audiotool
+
+      &.active:hover > div.state
+        visibility: visible
+
+      > div.state
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        position: absolute
+        background-size: 50%
+        background-color: rgba(black, 0.2)
+        visibility: hidden
+        cursor: pointer
+
+        @include play
+
+        &.playing
+          @include pause
+
+        &.buffering
+          @include buffering
+
+    > div.info
+      height: 4.5em
+      display: flex
+      flex-direction: column
+      justify-content: space-around
+      row-gap: 0.25em
+      overflow: hidden
+
+      > div
+        &:empty
+          border-radius: 0.125em
+          background-color: $PlaceHolderColor
+
+      > div.track
+        color: white
+        white-space: nowrap
+        height: 1.25em
+        overflow: hidden
+        text-overflow: ellipsis
+
+      > div.time
+        height: 1em
+        display: flex
+        justify-content: space-between
+        font-size: 0.75em
+        color: #2A2A2A
