adds footer in layout

--- a/src/audiotool/ui/TrackListItem.sass
+++ b/src/audiotool/ui/TrackListItem.sass
@@ -60,7 +60,7 @@ component
       cursor: pointer
 
   > .genre
-    width: 100%
+    width: calc(100% - 0.5em)
     height: 50%
     display: flex
     align-items: center
