footer nav + light fx on cover

--- a/src/audiotool/ui/TrackList.sass
+++ b/src/audiotool/ui/TrackList.sass
@@ -2,7 +2,7 @@
 @import common
 
 component
-  margin: 2em 0
+  padding: 2em 0
   width: var(--inner-width)
   display: grid
   grid-template-columns: repeat(2, max-content) minmax(0, 1fr) repeat(2, max-content)
