--- a/src/audiotool/ui/Footer.sass
+++ b/src/audiotool/ui/Footer.sass
@@ -1,13 +1,46 @@
+@import common
+
 component
-  flex: 0 0 6em
+  flex: 0 0 4em
   width: 100%
   display: flex
   bottom: 0
   position: sticky
-  background: linear-gradient(to top, #0A0A0A 0%, #0D0D0D 100%)
-  box-shadow: 0 -2em 2em 0 rgba(black, 0.4), 0 -0.125em 0.125em 0 rgba(black, 0.2)
+  background: $BlackColor
+  box-shadow: 0 -2em 2em 0 rgba(black, 0.2), 0 -0.125em 0.125em 0 rgba(black, 0.2)
 
   > section
     margin: 0 auto
     display: flex
+    align-items: center
+    column-gap: 1px
     width: var(--inner-width)
+
+    > button
+      flex: 1 0 0
+      height: 100%
+      appearance: none
+      border: none
+      background: none
+      outline: none
+      border-radius: 3px
+      color: rgba(gray, 0.2)
+      cursor: no-drop
+
+      &:not(:disabled)
+        color: gray
+        cursor: pointer
+
+        &:hover
+          background-color: gray
+
+          > svg
+            color: black
+
+        &:active
+          background-color: white
+
+      > svg
+        width: 2em
+        height: 2em
+        pointer-events: none
