--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -1,14 +1,14 @@
 @import common
 
 component
-  z-index: 1
+  z-index: 2
   top: 0
   position: sticky
   display: flex
   width: 100%
   justify-content: center
-  background: linear-gradient(to bottom, #0A0A0A 0%, #0D0D0D 100%)
-  box-shadow: 0 2em 2em 0 rgba(black, 0.4), 0 0.125em 0.125em 0 rgba(black, 0.2)
+  background: $BlackColor
+  box-shadow: 0 2em 2em 0 rgba(black, 0.2), 0 0.125em 0.125em 0 rgba(black, 0.2)
 
   > div.center
     margin: 1em 0
@@ -22,18 +22,22 @@ component
     > header.cover
       height: 5em
       display: flex
-      align-items: center
-      justify-content: center
       position: relative
-      overflow: hidden
-      border-radius: 0.5em
 
       > img
         height: 100%
         aspect-ratio: 1 / 1
         object-fit: contain
-        background-color: $PlaceHolderColor
-        @include audiotool
+        position: absolute
+        border-radius: 0.5em
+
+        &:nth-child(1)
+          background-color: $PlaceHolderColor
+          @include audiotool
+
+        &:nth-child(2)
+          mix-blend-mode: hard-light
+          filter: blur(16px) opacity(50%)
 
       &.active:hover > div.state
         visibility: visible
