--- a/src/audiotool/ui/common.sass
+++ b/src/audiotool/ui/common.sass
@@ -1,3 +1,4 @@
+$BlackColor: #101010
 $PlaceHolderColor: #1A1A1A
 
 // Icons
@@ -18,7 +19,7 @@ $PlaceHolderColor: #1A1A1A
   background-position: center
 
 @mixin audiotool
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"><path fill="black" fill-rule="evenodd" d="M24.833 27.986a3.158 3.158 0 0 1-2.773-1.646 11.932 11.932 0 0 1-6.066 1.646c-6.623 0-11.993-5.37-11.993-11.993S9.371 4 15.994 4s11.993 5.37 11.993 11.993v8.836a3.157 3.157 0 0 1-3.154 3.157m-8.84-17.676a5.683 5.683 0 1 0 0 11.366 5.683 5.683 0 0 0 0-11.366"/></svg>')
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="rgb(16, 16, 16)"><path fill-rule="evenodd" d="M24.833 27.986a3.158 3.158 0 0 1-2.773-1.646 11.932 11.932 0 0 1-6.066 1.646c-6.623 0-11.993-5.37-11.993-11.993S9.371 4 15.994 4s11.993 5.37 11.993 11.993v8.836a3.157 3.157 0 0 1-3.154 3.157m-8.84-17.676a5.683 5.683 0 1 0 0 11.366 5.683 5.683 0 0 0 0-11.366"/></svg>')
   background-repeat: no-repeat
   background-position: center
   background-size: 80%
