footer nav + light fx on cover

--- a/src/audiotool/ui/PlaybackProgress.sass
+++ b/src/audiotool/ui/PlaybackProgress.sass
@@ -30,6 +30,7 @@ component
       position: absolute
       border-radius: 1px
       background-color: orange
+      filter: blur(0.5px)
 
       &.buffering
         background: linear-gradient(to right, rgba(orange, 0.2) 0%, rgba(orange, 0.3) 50%, rgba(orange, 0.2) 100%)
