--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -37,7 +37,7 @@ component
 
         &:nth-child(2)
           mix-blend-mode: hard-light
-          filter: blur(16px) opacity(50%)
+          filter: blur(16px) opacity(75%)
 
       &.active:hover > div.state
         visibility: visible
@@ -74,7 +74,7 @@ component
           border-radius: 0.125em
           background-color: $PlaceHolderColor
 
-      > div.track
+      > div.top
         color: white
         white-space: nowrap
         height: 1.25em
