preparing user's albums

--- a/src/audiotool/ui/App.sass
+++ b/src/audiotool/ui/App.sass
@@ -11,6 +11,8 @@ component
     --inner-width: 96%
 
   > section.content
+    margin: 0 auto
     display: flex
-    justify-content: center
+    flex-direction: column
     flex: 1 0 0
+    width: var(--inner-width)
