--- a/src/audiotool/ui/TrackList.sass
+++ b/src/audiotool/ui/TrackList.sass
@@ -2,10 +2,29 @@
 @import common
 
 component
-  padding: 2em 0
-  width: var(--inner-width)
+  padding: 1em 0
+  width: 100%
   display: grid
   grid-template-columns: repeat(2, max-content) minmax(0, 1fr) repeat(2, max-content)
   align-items: center
   row-gap: 1em
   column-gap: 1em
+
+  > header
+    grid-column-start: 1
+    grid-column-end: -1
+    display: flex
+    flex-direction: row
+    align-items: center
+    justify-content: space-between
+
+    > button
+      height: 2em
+      padding: 0 1em
+      border-radius: 1em
+      appearance: none
+      border: none
+      background: none
+      outline: none
+      cursor: pointer
+      background-color: gray
