--- a/src/audiotool/ui/TrackListItem.sass
+++ b/src/audiotool/ui/TrackListItem.sass
@@ -66,7 +66,7 @@ component
     align-items: center
     justify-content: center
     border-radius: 2em
-    padding: 0.25em
+    padding: 0.25em 0.5em
     color: black
     background-color: rgba(white, 0.25)
     text-decoration: none
