adds complete round trip

--- a/src/audiotool/ui/ListHeader.sass
+++ b/src/audiotool/ui/ListHeader.sass
@@ -6,13 +6,6 @@ component
   align-items: center
   justify-content: space-between
 
-  > button
-    height: 2em
-    padding: 0 1em
-    border-radius: 1em
-    appearance: none
-    border: none
-    background: none
-    outline: none
-    cursor: pointer
-    background-color: gray
+  > a
+    font-size: 0.75em
+    text-decoration: none
