--- a/src/audiotool/ui/TrackListItem.sass
+++ b/src/audiotool/ui/TrackListItem.sass
@@ -45,6 +45,7 @@ component
     border-radius: 0.25em
     object-fit: contain
     background-color: #222
+    cursor: pointer
 
   > .names
     display: flex
