--- a/src/audiotool/ui/Playlists.sass
+++ b/src/audiotool/ui/Playlists.sass
@@ -6,5 +6,26 @@ component
   width: 100%
   display: flex
   flex-direction: column
-  row-gap: 1em
+  row-gap: 0.5em
   column-gap: 1em
+
+  > button
+    flex: 0 0 4em
+    display: flex
+    border: none
+    background: none
+    outline: none
+    cursor: pointer
+    column-gap: 1em
+    align-items: center
+    color: gray
+
+    > img
+      height: 4em
+      aspect-ratio: 1 / 1
+      border-radius: 0.5em
+      pointer-events: none
+      background-color: $PlaceHolderColor
+
+    > div
+      pointer-events: none
