mobile artist cards

--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -74,7 +74,7 @@ component
           border-radius: 0.125em
           background-color: $PlaceHolderColor
 
-      > div.top
+      > a.top
         color: white
         white-space: nowrap
         height: 1.25em
