--- a/src/audiotool/ui/ArtistCards.sass
+++ b/src/audiotool/ui/ArtistCards.sass
@@ -6,6 +6,8 @@ component
   width: 100%
   display: grid
   grid-template-columns: repeat(6, 1fr)
+  @include mobile
+    grid-template-columns: repeat(3, 1fr)
   gap: 1em
 
   > button
