fix wrong selector

--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -69,7 +69,7 @@ component
       row-gap: 0.25em
       overflow: hidden
 
-      > div
+      > div, a
         &:empty
           border-radius: 0.125em
           background-color: $PlaceHolderColor
