track profile link

--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -80,6 +80,7 @@ component
         height: 1.25em
         overflow: hidden
         text-overflow: ellipsis
+        text-decoration: none
 
       > div.time
         height: 1em
