--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -62,25 +62,58 @@ component
           @include buffering
 
     > div.info
-      height: 4.5em
       display: flex
       flex-direction: column
-      justify-content: space-around
       row-gap: 0.25em
+      justify-content: space-around
       overflow: hidden
 
-      > div, a
-        &:empty
-          border-radius: 0.125em
-          background-color: $PlaceHolderColor
+      > div.top
+        display: flex
+        flex-direction: row
+        column-gap: 0.5em
 
-      > a.top
-        color: white
-        white-space: nowrap
-        height: 1.25em
-        overflow: hidden
-        text-overflow: ellipsis
-        text-decoration: none
+        > div.meta
+          flex: 1 0 0
+          display: flex
+          flex-direction: column
+          row-gap: 0.25em
+
+          > div, a
+            flex: 0 0 1.25em
+
+            &:empty
+              border-radius: 0.125em
+              background-color: $PlaceHolderColor
+
+          > a.name
+            color: white
+            white-space: nowrap
+            overflow: hidden
+            text-overflow: ellipsis
+            text-decoration: none
+
+        > nav
+          display: flex
+          column-gap: 0.5em
+
+          > button
+            flex: 1 0 0
+            margin: 0
+            padding: 0
+            font-family: inherit
+            font-size: inherit
+            appearance: none
+            border: none
+            background: none
+            outline: none
+            color: $PlaceHolderColor
+            cursor: pointer
+
+            > svg
+              width: 2em
+              height: 2em
+              pointer-events: none
 
       > div.time
         height: 1em
