lazy artist avatar

--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -118,6 +118,8 @@ component
       > div.time
         height: 1em
         display: flex
+        align-items: center
+        column-gap: 1em
         justify-content: space-between
         font-size: 0.75em
         color: #2A2A2A
