adds hover state

--- a/src/audiotool/ui/Player.sass
+++ b/src/audiotool/ui/Player.sass
@@ -110,6 +110,12 @@ component
             color: $PlaceHolderColor
             cursor: pointer
 
+            &:hover
+              color: rgba(white, 0.7)
+
+            &:active
+              color: white
+
             > svg
               width: 2em
               height: 2em
